--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,10 @@
     "nodemailer": "^6.7.8"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "standard": "17.1.0"
+  },
+  "eslintConfig": {
+    "extends": "standard"
   }
 }
